--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </header>
 <!-- header End -->
 <main>
-    <section>
+    <section class="container">
         <!-- top-player and top-blog section -->
-        <div class="top-player container">
+        <div class="top-player">
             <h2 class="section-title">Top-Player</h2>
             <div class="players">
                 <div class="player">
@@ -44,6 +44,55 @@
                     <img src="images/players/player-6.png" alt="">
                     <h3 class="player-name">Top player-6</h3>
                 </div>
+            </div>
+        </div>
+        <hr>
+        <div class="top-blog">
+            <h2 class="section-title">Top-Blog</h2>
+            <div class="blogs">
+                <article class="blog">
+                    <div class="thumbail">
+                        <img src="/images/blogs/blog-1.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">13 of My Favorite
+                            UI/UX Goodies</h3>
+                        <p class="blog-author">By <a href="">Sayed Sumon</a></p>
+                    </div>
+                </article>
+
+                <article class="blog">
+                    <div class="thumbail">
+                        <img src="/images/blogs/blog-2.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">7 typography tips
+                            for interface design</h3>
+                        <p class="blog-author">By <a href="">Sayed Sumon</a></p>
+                    </div>
+                </article>
+
+                <article class="blog">
+                    <div class="thumbail">
+                        <img src="/images/blogs/blog-3.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">UI cheat sheet:
+                            list vs grids</h3>
+                        <p class="blog-author">By <a href="">Sayed Sumon</a></p>
+                    </div>
+                </article>
+
+                <article class="blog">
+                    <div class="thumbail">
+                        <img src="/images/blogs/blog-4.png" alt="">
+                    </div>
+                    <div class="blog-info">
+                        <h3 class="blog-title">Your logo is
+                            copied</h3>
+                        <p class="blog-author">By <a href="">Sayed Sumon</a></p>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
