--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="blogs">
                     <article class="blog">
                         <div class="thumbail">
-                            <img src="/images/blogs/blog-1.png" alt="">
+                            <img src="images/blogs/blog-1.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">13 of My Favorite
@@ -67,7 +67,7 @@
 
                     <article class="blog">
                         <div class="thumbail">
-                            <img src="/images/blogs/blog-2.png" alt="">
+                            <img src="images/blogs/blog-2.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">7 typography tips
@@ -78,7 +78,7 @@
 
                     <article class="blog">
                         <div class="thumbail">
-                            <img src="/images/blogs/blog-3.png" alt="">
+                            <img src="images/blogs/blog-3.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">UI cheat sheet:
