--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                     <article class="blog">
                         <div class="thumbail">
-                            <img src="/images/blogs/blog-4.png" alt="">
+                            <img src="images/blogs/blog-4.png" alt="">
                         </div>
                         <div class="blog-info">
                             <h3 class="blog-title">Your logo is
